--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <!-- Primary Meta Tags -->
     <meta name="title" content="Unstop Notes - A Powerful Notes Taking Tool.">
     <meta name="description" content="Unstop Notes is a powerful notes taking tool. You can save any important text/link very easily, Unstop will save your notes even if you close the site :)">
+    <meta name="theme-color" content="#f5f5f5">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://linkofyourwebsite.com/">
+    <meta property="og:url" content="https://unstopnotes.ml/">
     <meta property="og:title" content="Unstop Notes - A Powerful Notes Taking Tool.">
     <meta property="og:description" content="Unstop Notes is a powerful notes taking tool. You can save any important text/link very easily, Unstop will save your notes even if you close the site :)">
     <meta property="og:image" content="https://i.ibb.co/mD6bF77/Screenshot-from-2022-01-24-16-51-20.png">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://linkofyourwebsite.com/">
+    <meta property="twitter:url" content="https://unstopnotes.ml/">
     <meta property="twitter:title" content="Unstop Notes - A Powerful Notes Taking Tool.">
     <meta property="twitter:description" content="Unstop Notes is a powerful notes taking tool. You can save any important text/link very easily, Unstop will save your notes even if you close the site :)">
     <meta property="twitter:image" content="https://i.ibb.co/mD6bF77/Screenshot-from-2022-01-24-16-51-20.png">
