--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Primary Meta Tags -->
     <meta name="title" content="Unstop Notes - A Powerful Notes Taking Tool.">
     <meta name="description" content="Unstop Notes is a powerful notes taking tool. You can save any important text/link very easily, Unstop will save your notes even if you close the site :)">
-    <meta name="theme-color" content="#f5f5f5">
+    <meta name="theme-color" content="#F88164">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://unstopnotes.ml/">
